Fix config page HTML and clean up code

--- a/LDAP-Auth/Config/configPage.html
+++ b/LDAP-Auth/Config/configPage.html
@@ -132,12 +132,12 @@
                                         <span>Enable profile image synchronization</span>
                                     </label>
                                     <div class="fieldDescription checkboxFieldDescription">
-                                        Note that this is a one way sync. If a user changes their profile image in Jellyfin it won't be updated unless the profile image changes in LDAP or the user deletes it in Jellyfin.</div>
+                                        Note that this is a one way sync. If a user changes their profile image in Jellyfin it won't be updated unless the profile image changes in LDAP or the user deletes it in Jellyfin.
+                                    </div>
                                 </div>
                                 <div class="inputContainer fldExternalAddressFilter">
                                     <input is="emby-input" type="text" id="txtLdapProfileImageAttribute" label="LDAP Profile Image Attribute:" />
-                                    <div class="fieldDescription">
-                                        The LDAP attribute for synchronizing profile images.
+                                    <div class="fieldDescription">The LDAP attribute for synchronizing profile images.</div>
                                 </div>
                                 <hr>
                                 <h4>Administrators</h4>
